--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
  <html>
     <head>
         <meta charset="utf-8">
-        <title>Hello, World!</title>
+        <title>This is my Website</title>
     </head>
+        Welcome!
     <body>
-        Hello, World!
+        <font face="Times New Roman" size="12" color="green"> This is computer science. Yay </font>
     </body>
+    <head>
+  <link rel="stylesheet" type="text/css" href="theme.css">
+    </head>
+    <picture>
+  <source media="(min-width: 650px)" srcset="img_pink_flowers.jpg">
+  <source media="(min-width: 465px)" srcset="img_white_flower.jpg">
+  <img src="img_orange_flowers.jpg" alt="Flowers" style="width:auto;">
+</picture>
+    <a href="https://google.com/">Google</a>
  </html>
