--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <link rel="stylesheet" type="text/css" href="theme.css">
     </head>
     <picture>
-  <source media="(min-width: 650px)" srcset="img_pink_flowers.jpg">
-  <source media="(min-width: 465px)" srcset="img_white_flower.jpg">
-  <img src="img_orange_flowers.jpg" alt="Flowers" style="width:auto;">
+  <source media="(min-width: 650px)" srcset="img_5419.jpg">
+  <source media="(min-width: 465px)" srcset="img_5419.jpg">
+  <img src="img_5419.jpg" alt="Pic" style="width:auto;">
 </picture>
     <a href="https://google.com/">Google</a>
  </html>
