--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>This is my Website</title>
     </head>
-        Welcome!
+        <font size="3" color="red"> Welcome! </font>
     <body>
         <font face="Times New Roman" size="12" color="green"> This is computer science. Yay </font>
     </body>
