--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
  <html>
     <head>
         <meta charset="utf-8">
-        <title>This is my Website</title>
+        <title>I love my children.</title>
     </head>
-        <font size="3" color="red"> Welcome! </font>
+        <font size="3" color="red"> I love you guys. </font>
     <body>
-        <font face="Times New Roman" size="12" color="green"> This is computer science. Yay </font>
+        <font face="Times New Roman" size="12" color="green"> Check out this cute pic! </font>
     </body>
     <head>
   <link rel="stylesheet" type="text/css" href="theme.css">
