--- a/index.html
+++ b/index.html
@@ -16,5 +16,5 @@
   <source media="(min-width: 465px)" srcset="IMG_5419.jpeg">
   <img src="IMG_5419.jpeg" alt="Pic" style="width:auto;">
 </picture>
-    <a href="https://google.com/">Google</a>
+    <a href="https://www.instagram.com/oxytfmemes/?hl=en">Oxytfmemes</a>
  </html>
